	12111,Wrapped_Food: gets 3 of any food<- food or mixed food? Need to know so it can be implemented. [Skotlex]
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	4327,Bloody_Butterfly_Card: I think this should be working in WoE....otherwise its just a bad phen card thats more rare...anyone know? [Kayla]
	--

10/24
	* Added Thanatos/Abyss MOb skills and changed some thanatos/abyss mob stats. Thanks to Vicious_Pucca, Poki#3 and erKURITA. [Nexon]
	* Added inf 32 (can target traps) to Arrow Shower and Heaven's Drive. I
	  hope it doesn't messes up the client... but this is how it should be since
	  those skills CAN hit traps [Skotlex]
	* Fixed Poison Toad Card - Now equips on Accessory [Kayla]
	* Changed Investigate's range to 2. [Skotlex]
	* Added GrimTooth to skill_cast_db, time2 is the duration of the stop
	effect. [Skotlex]
10/23
	* Fixed the Weapon coma rate script of Lord of Death Card [Skotlex]
	* Fixed type in Moonlight Dagger script. [Skotlex]
	* Updated Mini Furnace to be produce 21 since that's the new index for
	   rough material refinements. [Skotlex]
	* Changed Moonlight dagger to be steal 3 sp per hit, not 3% [Skotlex]
	* Added healing effect to mixed foods, added produce effect to cooking sets [DracoRPG]
	* Updated Poring V's mode, thanks to Vicious Pucca. [Skotlex]
	* Updated castle_db.txt for correct work on /guildbreak [Lupus]
10/22
	* Changed Extremity Fist and Investigate's range to 3. [Skotlex]
	* Bumped Magaleta's heal levels to 9 and 10. [Skotlex]
10/19
	* Corrected a bunch of spells that should be "no overlap" in skill_unit_db.
	  [Skotlex]
	* Added Arrow Vulcan to skill_castnodex.txt to specify you shouldn't be
	  able to walk during the skill's delay. [Skotlex]