@@ -60,7 +60,7 @@
 44,0,0,0,0,0,10,0,no,0,0,0,none,0	//AC_VULTURE#Vulture's Eye#
 45,0,6,4,0,1,10,1,no,0,0,0,weapon,0	//AC_CONCENTRATION#Improve Concentration#
 46,-3,8,1,-1,0,10,2,no,0,0,0,weapon,0	//AC_DOUBLE#Double Strafe#
-47,-3,6,33,-1,2,10,1,no,0,0,0,weapon,2	//AC_SHOWER#Arrow Shower#
+47,-3,6,1,-1,2,10,1,no,0,0,0,weapon,2	//AC_SHOWER#Arrow Shower#
 48,0,0,0,-1,0,10,2,no,0,0,0,weapon,0	//TF_DOUBLE#Double Attack#
 49,0,0,0,0,0,10,0,no,0,0,0,weapon,0	//TF_MISS#Improve Dodge#
 50,1,6,1,0,1,10,1,no,0,0,0,weapon,0	//TF_STEAL#Steal#
@@ -105,7 +105,7 @@
 88,0,6,4,1,0,10,1,yes,0,0,0,magic,0	//WZ_FROSTNOVA#Frost Nova#
 89,8,6,2,1,0,10,1,yes,0,0,0,magic,2	//WZ_STORMGUST#Storm Gust#
 90,8,8,1,2,0,5,1:2:3:4:5,yes,0,0,0,magic,0	//WZ_EARTHSPIKE#Earth Spike#
-91,8,8,34,2,0,5,1:2:3:4:5,yes,0,0,0,magic,0	//WZ_HEAVENDRIVE#Heaven's Drive#
+91,8,8,2,2,0,5,1:2:3:4:5,yes,0,0,0,magic,0	//WZ_HEAVENDRIVE#Heaven's Drive#
 92,8,6,2,2,1,5,1,yes,0,0,3,magic,0	//WZ_QUAGMIRE#Quagmire#
 93,8,6,1,0,1,1,1,yes,0,0,0,magic,0	//WZ_ESTIMATION#Sense#
 94,0,0,0,0,0,5,0,no,0,0,0,weapon,0	//BS_IRON#Iron Tempering#
